Rewrite with C++ Programming Language and DirectX API.

--- a/I Love You Demo/I Love You Demo.vcxproj
+++ b/I Love You Demo/I Love You Demo.vcxproj
@@ -139,9 +139,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="I Love You Demo.c" />
+    <ClCompile Include="MainWindow.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="BaseWindow.h" />
+    <ClInclude Include="MainWindow.h" />
+    <ClInclude Include="pch.h" />
     <ClInclude Include="resource.h" />
   </ItemGroup>
   <ItemGroup>
