--- a/DisplayUtils/DisplayUtils.vcxitems.filters
+++ b/DisplayUtils/DisplayUtils.vcxitems.filters
@@ -6,6 +6,9 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="$(MSBuildThisFileDirectory)Resolution.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
     <ClInclude Include="$(MSBuildThisFileDirectory)DisplayUtils.h">
       <Filter>Header Files</Filter>
     </ClInclude>
