--- a/ErrorHelpers/ErrorHelpers.vcxitems.filters
+++ b/ErrorHelpers/ErrorHelpers.vcxitems.filters
@@ -2,11 +2,11 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="Header Files">
-      <UniqueIdentifier>{eb22c959-65bb-4280-b96e-3cf528015c5a}</UniqueIdentifier>
+      <UniqueIdentifier>{4f21c1be-817d-4deb-b259-bbbe566277b1}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="$(MSBuildThisFileDirectory)SystemErrorHelpers.h">
+    <ClInclude Include="$(MSBuildThisFileDirectory)ErrorHelpers.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
