Update source files.

--- a/I Love You Demo/I Love You Demo.vcxproj.filters
+++ b/I Love You Demo/I Love You Demo.vcxproj.filters
@@ -27,7 +27,7 @@
     <ClInclude Include="ILoveYouDemo.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="MyAppSettingsData.h">
+    <ClInclude Include="MyAppData.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="StepTimer.h">
