--- a/I Love You Demo/I Love You Demo.vcxproj
+++ b/I Love You Demo/I Love You Demo.vcxproj
@@ -153,7 +153,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MainWindow.h" />
-    <ClInclude Include="MyAppSettingsData.h" />
+    <ClInclude Include="MyAppData.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="ILoveYouDemo.h" />
     <ClInclude Include="StepTimer.h" />
